--- a/obautista/ulib/unad_estilos2018.css
+++ b/obautista/ulib/unad_estilos2018.css
@@ -902,3 +902,27 @@ ul#navmenu-h ul ul li.iehover ul {
 .lienzo{
 	padding:5px;
 }
+
+.fondoRojo{
+	background: #A70707;
+	border: 1px solid #32B3FF;
+	color: #FFF;
+	margin-bottom:0;
+	text-align:center;
+}
+
+.fondoVerde {
+	background: #23530E;
+	border: 1px solid #32B3FF;
+	color: #FFF;
+	margin-bottom:0;
+	text-align:center;
+}
+
+.fondoNaranja {
+	background: #FF9900;
+	border: 1px solid #32B3FF;
+	color: #FFF;
+	margin-bottom:0;
+	text-align:center;
+}
